--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -39,7 +39,7 @@
 
       <section class="jumbotron text-center">
         <div class="container">
-          <h1 class="jumbotron-heading">{{ title }} - Продукты</h1>
+          <h1 class="jumbotron-heading">{{ title }}</h1>
           <p class="lead text-muted">Добро пожаловать в наш магазин! Здесь представлен широкий ассортимент продуктовых товаров по выгодным ценам. Спешите заказывать, пока все не раскупили!</p>
         </div>
       </section>
