--- a/shop/templates/shop/menu_products.html
+++ b/shop/templates/shop/menu_products.html
@@ -5,8 +5,9 @@
 <div class="col-sm-4 offset-md-1 py-4">
   <h4 class="text-white">Меню</h4>
   <ul class="list-unstyled">
-    <li><a href="#" class="text-white">Категории</a></li>
+    <li><a href="{% url 'index' %}" class="text-white">Главная</a></li>
     <li><a href="#" class="text-white">Скидки</a></li>
+    <li><a href="{% url 'list' %}" class="text-white">Отзывы</a></li>
     <li><a href="#" class="text-white">Контакты</a></li>
   </ul>
 </div>
