--- a/shop/templates/shop/index_list.html
+++ b/shop/templates/shop/index_list.html
@@ -4,6 +4,9 @@
 
 {% block content %}
 <div class="row">
+    <div class="col-12 mb-5">
+        <a class="btn btn-primary" href="{% url 'product_create' %}">Добавить продукт</a>
+    </div>
     {% for object in product_list %}
     <div class="col-md-4">
         <div class="card mb-4 box-shadow">
