hw6 is complete

--- a/shop/templates/shop/version_form.html
+++ b/shop/templates/shop/version_form.html
@@ -7,9 +7,9 @@
         <div class="card">
             <div class="card-header">
                 {% if object %}
-                    Редактирование продукта
+                    Редактирование версии
                 {% else %}
-                    Добавление нового продукта
+                    Добавление новой версии
                 {% endif %}
             </div>
             <div class="card-body">
