--- a/shop/templates/shop/index_list.html
+++ b/shop/templates/shop/index_list.html
@@ -6,6 +6,8 @@
 <div class="row">
     <div class="col-12 mb-5">
         <a class="btn btn-primary" href="{% url 'product_create' %}">Добавить продукт</a>
+        <a class="btn btn-primary" href="{% url 'create_version' %}">Добавить версию</a>
+        <a class="btn btn-primary" href="{% url 'list_version' %}">Версии</a>
     </div>
     {% for object in product_list %}
     <div class="col-md-4">
@@ -22,7 +24,10 @@
                 <p class="card-text">{{ object.description|slice:100 }}</p>
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Купить</button>
+                        <button type="button" class="btn btn-sm btn-outline-primary">Купить</button>
+                        <button type="button" class="btn btn-sm btn-outline-secondary">
+                            <a href="{% url 'product_update' object.pk %}">Редактировать</a>
+                        </button>
                     </div>
                     <small class="text-muted">9 mins</small>
                 </div>
